# 024_Datamites

./: .gitignore  README.md  app.py  check.py  pyproject.toml  workflow.py  workflow_all_flows.html  workflow_init.py  workflow_rag.html  workflow_rag.py
Live Voting/: .gitignore  README.md  analysis.ipynb  app.py  docker-compose.yml  grouped_votes.csv  kafka_messages.csv  main.py  requirements.txt  run_all.sh  spark-streaming.py  train.csv  voting.py
Live Voting/vote_prediction/: model.py
documents/NPP_manifesto/: Anura Kumara Disanayake NPP Manifesto.md
documents/News/: news 1.txt  news 10.txt  news 11.txt  news 12.txt  news 13.txt  news 14.txt  news 15.txt  news 16.txt  news 17.txt  news 18.txt  news 19.txt  news 2.txt  news 20.txt  news 3.txt  news 4.txt  news 5.txt  news 6.txt  news 7.txt  news 8.txt  news 9.txt
documents/SJB_manifesto/: Sajith premedasa SJB manifesto.md
documents/UNP_manifesto /: Ranil Wikramasinghe UNP manifesto.md
pages/: news.py  politicalAnalyst.py
storage/: default__vector_store.json  docstore.json  index_store.json
storage/News/: default__vector_store.json  docstore.json  index_store.json
storage/manifesto_npp/: default__vector_store.json  docstore.json  index_store.json
storage/manifesto_sjb/: default__vector_store.json  docstore.json  index_store.json
storage/manifesto_unp/: default__vector_store.json  docstore.json  index_store.json
workflows/: client.py  event.py  workflow.py  workflow_init.py  workflow_rag.py
